Qualify verified SkyPilot HTTPS under GraalPy (#276)
* Add HTTPS qualification and select GraalPy runtime for #248

* Share packaged SDK qualification launch settings

* Verify HTTPS peer names through urllib3 in the GraalPy bridge

* Lock the qualified GraalPy dependencies for #248

* Record packaged HTTPS qualification for #248

* Normalize the setup-java hotfix label for #248

* Update Netty for the required image security gate